Re-order the build so that Kobo AuraHD pdf is built last

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -9,8 +9,8 @@
 % various page sizes
 %\tunemarkuptag{pghanlin}
 %\tunemarkuptag{pgnexus7}
-%\tunemarkuptag{pgkoboaurahd}
-\tunemarkuptag{pgkindledx}
+\tunemarkuptag{pgkoboaurahd}
+%\tunemarkuptag{pgkindledx}
 %\tunemarkuptag{pgkobomini}
 
 \RequirePackage[figure,curq]{totalcount}
