Reduce the number of lettrine lines to 2 on Kobo Mini

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -516,6 +516,7 @@
 \newcommand{\txtw}{0.81\linewidth}
 
 \tunemarkup{pgkobomini}{%
+\setcounter{DefaultLines}{2}
 \newcommand{\bibtocsuperheadfont}{\fontsize{13}{13}\selectfont}
 \newcommand{\bibheadpapersize}{\fontsize{8}{8}\selectfont}
 \renewcommand{\bibheadchapsize}{\fontsize{8}{8}\selectfont}
