Remove unused code + add PDF flavour identifier on the "copyright" page

--- a/tex/title.tex
+++ b/tex/title.tex
@@ -93,11 +93,12 @@ The latest version of this book can be downloaded from:\\
 {\upshape\bfseries http://www.bibles.org.uk}\\
 Please send all comments \&\ suggestions to {\makeatletter\upshape\bfseries aivazian.tigran@gmail.com\makeatother}\\
 The apparatus (marked with a circle in the text) contains all significant changes made since the 1955 first edition of the Urantia Book.\\
-The symbol \pc\tunemarkup{pgluluhb}{\kern-2pt} marks the first paragraph in the group as in the first edition, where such groups were delimited by blank lines.\\
+The symbol \pc\ marks the first paragraph in the group as in the first edition, where such groups were delimited by blank lines.\\
 The asterisk * indicates a study note other than a textual variant.\\[5pt]
 \tux\ Typeset with \XeLaTeX\ under Linux.\\
 Text set in \textbf{\tunemarkup{minionpro}{Adobe }\tunemarkup{garamond}{Adobe }\urantiamainfont} at \urantiamainfontsize pt.\\[18pt]
-\upshape\small\bfseries Version: \mytoday{}\\
+\upshape\small\bfseries PDF version: \tunemarkup{pgnexus7}{7in Colour}\tunemarkup{pghanlin}{6in eInk}\tunemarkup{pgkobomini}{5in eInk}\tunemarkup{pgkoboaurahd}{7in eInk}\tunemarkup{pgkindledx}{10in eInk}\\
+\upshape\small\bfseries PDF date: \mytoday{}\\
 }
 \end{center}
 
