--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -755,7 +755,7 @@
    header={#2},
    abbr={p#1}
 }%
-\fancyhead[CO]{\bibheadfont\tunemarkup{pghanlin}{\addfontfeature{WordSpace=1.1}}\tunemarkup{pgluluhb}{\headersizeadjustluluhb{#1}}\MakeUppercase{#2}}%
+\fancyhead[CO]{\bibheadfont\tunemarkup{pghanlin}{\addfontfeature{WordSpace=1.1}}\MakeUppercase{#2}}%
 \bib@raise@anchor{\bibpdfbookmark[2]{0. #2}{p#1_0}}%
 }
 
