--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -25,7 +25,7 @@ It has the following main features:
 \item The Standard Reference Text (SRT) has been used as a base of this translation.
 \item All significant changes to the text (present also in SRT) are documented in the critical apparatus, together with a brief explanation of the reason for the change. To signify the presence of a textual variant, a circle is printed at the end of the affected word or paragraph, like this\r{}.
 \item Study notes have been added and are marked with an asterisk, like this\ts{*}.
-\item The symbol \pc\tunemarkup{pgluluhb}{\kern-2pt} marks the first paragraph in the group as in the 1955 first printing, where such groups were delimited by blank lines.
+\item The symbol \pc\ marks the first paragraph in the group as in the 1955 first printing, where such groups were delimited by blank lines.
 \item All distance and temperature measures have been converted to metric units, except where there was even the slightest potential for error, such as in the use of ``Jerusem miles'', which was left intact. The idiomatic expressions like ``carry his pack for a mile'' were also left intact, obviously.
 \item Long and hard to memorise phrases like ``three hundred and forty\hyp{}five thousand'' have been converted to a compact form ``345,000''. Likewise, for phrases like ``seventy\hyp{}five per cent'', a more compact form of ``75\%'' was chosen. Likewise, the time designations like ``fifteen minutes past four o’clock'' now read ``16:15''.
 \item The designation of the author of each paper (and Foreword) is printed in \textit{italics} on a line by itself just before the text.
