Beautify the title page a bit more.

--- a/tex/title.tex
+++ b/tex/title.tex
@@ -76,17 +76,17 @@ Edited by Tigran Aivazian\\[2ex]
 \bib@raise@anchor{\bibpdfbookmark[0]{Copyright Page}{Cpr}}%
 \makeatother
 
+\newcommand{\serpimolot}{{\fontspec{Mortbats} K}}
+
 \begin{center}
 \vspace*{\stretch{0.3}}
-\tunemarkup{pghanlin}{\begin{center}\parbox{7cm}{\normalsize\bfseries\itshape ``Of all human knowledge, that which is of greatest value is to know the religious life of Jesus and how he lived it.'' \bibref[(196:1.3)]{p196 1:3}}\end{center}}
-\tunemarkup{pgnexus7}{\begin{center}\parbox{7cm}{\normalsize\bfseries\itshape ``Of all human knowledge, that which is of greatest value is to know the religious life of Jesus and how he lived it.'' \bibref[(196:1.3)]{p196 1:3}}\end{center}}
-\tunemarkup{pgkindledx}{\begin{center}\parbox{9cm}{\large\bfseries\itshape ``Of all human knowledge, that which is of greatest value is to know the religious life of Jesus and how he lived it.'' \bibref[(196:1.3)]{p196 1:3}}\end{center}}
+\begin{center}\parbox{7cm}{\tunemarkuptwo{pgkindledx}{\Large}{\normalsize}\bfseries\itshape ``Of all human knowledge, that which is of greatest value is to know the religious life of Jesus and how he lived it.'' \bibref[(196:1.3)]{p196 1:3}}\end{center}
 \vspace*{\stretch{0.5}}
 \tunemarkup{pghanlin}{\fontsize{8}{10}\itshape}
 \tunemarkup{pgnexus7}{\fontsize{8}{10}\itshape}
 \tunemarkup{pgkindledx}{\fontsize{10}{12}\itshape}
 \parbox{0.9\linewidth}{\centering
-\textbf{\upshape\nocopyright\ No copyright is claimed on this book.\\
+\textbf{\upshape\nocopyright\ No copyright is claimed on this book \serpimolot\\
 The text of the Urantia Papers is in the \itshape public domain}.\\[5pt]
 Cover design by Gary Tonge, www.vision-afar.com.\\
 The latest version of this book can be downloaded from:\\
