Capitalize the word "World"

--- a/tex/quiz.tex
+++ b/tex/quiz.tex
@@ -7,7 +7,7 @@
 {Venus}{0}
 {Urantia}{1}
 {Planet of the Apes}{0}
-{The world of the Cross}{0}
+{The World of the Cross}{0}
 \qstop
 
 \qstart{What is the name of our local Universe?}
