Add a few more questions to the quiz.

--- a/tex/quiz.tex
+++ b/tex/quiz.tex
@@ -264,7 +264,83 @@
 {Unqualified Absolute}{1}
 \qstop
 
-\qstart{Thought Adjusters are...}
+\qstart{What lies in the actual (upper) half of the axis of mind in the Existential Flower?}
+{Universal Father}{0}
+{Eternal Son}{0}
+{Infinite Spirit}{1}
+{Isle of Paradise}{0}
+{Deity Absolute}{0}
+{Universal Absolute}{0}
+{Unqualified Absolute}{0}
+\qstop
+
+\qstart{What lies in the potential (lower) half of the axis of mind in the Existential Flower?}
+{Universal Father}{0}
+{Eternal Son}{0}
+{Infinite Spirit}{0}
+{Isle of Paradise}{0}
+{Deity Absolute}{0}
+{Universal Absolute}{1}
+{Unqualified Absolute}{0}
+\qstop
+
+\qstart{What lies in the actual (upper) half of the axis of spirit in the Existential Flower?}
+{Universal Father}{0}
+{Eternal Son}{1}
+{Infinite Spirit}{0}
+{Isle of Paradise}{0}
+{Deity Absolute}{0}
+{Universal Absolute}{0}
+{Unqualified Absolute}{0}
+\qstop
+
+\qstart{What lies in the potential (lower) half of the axis of spirit in the Existential Flower?}
+{Universal Father}{0}
+{Eternal Son}{0}
+{Infinite Spirit}{0}
+{Isle of Paradise}{0}
+{Deity Absolute}{1}
+{Universal Absolute}{0}
+{Unqualified Absolute}{0}
+\qstop
+
+\qstart{What lies in the actual (upper) half of the axis of matter in the Existential Flower?}
+{Universal Father}{0}
+{Eternal Son}{0}
+{Infinite Spirit}{0}
+{Isle of Paradise}{1}
+{Deity Absolute}{0}
+{Universal Absolute}{0}
+{Unqualified Absolute}{0}
+\qstop
+
+\qstart{What lies in the potential (lower) half of the axis of matter in the Existential Flower?}
+{Universal Father}{0}
+{Eternal Son}{0}
+{Infinite Spirit}{0}
+{Isle of Paradise}{0}
+{Deity Absolute}{0}
+{Universal Absolute}{0}
+{Unqualified Absolute}{1}
+\qstop
+
+\qstart{What lies at the centre of the Existential Flower?}
+{Universal Father}{1}
+{Eternal Son}{0}
+{Infinite Spirit}{0}
+{Isle of Paradise}{0}
+{Deity Absolute}{0}
+{Universal Absolute}{0}
+{Unqualified Absolute}{0}
+\qstop
+
+\qstart{When in doubt it is best to refer the word God to the person of...}
+{the Universal Father}{1}
+{the Eternal Son}{0}
+{the Infinite Spirit}{0}
+\qstop
+
+\qstart{Thought Adjusters are ...}
 {personal}{0}
 {prepersonal}{1}
 {superpersonal}{0}
@@ -496,7 +572,18 @@
 \qpaper{110}{Relation of Adjusters to Individual Mortals}
 \qpaper{111}{The Adjuster and the Soul}
 \qpaper{112}{Personality Survival}
+
 \qpaper{113}{Seraphic Guardians of Destiny}
+
+
+\qstart{What is the first assignment of a resurrected mortal?}
+{Learning Satanian language}{0}
+{Assisting seraphim}{1}
+{Learning the tongue of Uversa}{0}
+{Observing the stars}{0}
+{Sending a message back to the relatives on Earth}{0}
+\qstop
+
 \qpaper{114}{Seraphic Planetary Government}
 \qpaper{115}{The Supreme Being}
 \qpaper{116}{The Almighty Supreme}
