Add a few more questions.

--- a/tex/quiz.tex
+++ b/tex/quiz.tex
@@ -47,21 +47,21 @@
 {Urantia}{0}
 \qstop
 
-\qstart{The seven superuniverses in association with the central universe are known as...}
+\qstart{The seven superuniverses in association with the central universe are known as ...}
 {grand universe}{1}
 {master universe}{0}
 {total universe}{0}
 {Paradise}{0}
 \qstop
 
-\qstart{Uninhabited universes of outer space are part of...}
+\qstart{Uninhabited universes of outer space are part of ...}
 {grand universe}{0}
 {master universe}{1}
 {total universe}{0}
 {Paradise}{0}
 \qstop
 
-\qstart{The unifying characterizing quality of Deity is best comprehended by creatures as...}
+\qstart{The unifying characterizing quality of Deity is best comprehended by creatures as ...}
 {perfection}{0}
 {intelligence}{0}
 {wisdom}{0}
@@ -71,7 +71,7 @@
 {power}{0}
 \qstop
 
-\qstart{Divinity is creature comprehensible as...}
+\qstart{Divinity is creature comprehensible as ...}
 {mind, spirit, and matter}{0}
 {love, mercy, and ministry}{0}
 {time, space, and energy}{0}
@@ -79,7 +79,7 @@
 {justice, power, and sovereignty}{0}
 \qstop
 
-\qstart{Divinity is correlated in personality as...}
+\qstart{Divinity is correlated in personality as ...}
 {love, mercy, and ministry}{1}
 {mind, spirit, and matter}{0}
 {truth, beauty, and goodness}{0}
@@ -87,7 +87,7 @@
 {justice, power, and sovereignty}{0}
 \qstop
 
-\qstart{Divinity is disclosed on impersonal levels as...}
+\qstart{Divinity is disclosed on impersonal levels as ...}
 {mind, spirit, and matter}{0}
 {love, mercy, and ministry}{0}
 {truth, beauty, and goodness}{0}
@@ -165,12 +165,12 @@
 {Ultimate}{0}
 \qstop
 
-\qstart{Deity functioning on the first creature\hyp{}identificational level as time\hyp{}space overcontrollers of the grand universe is called...}
+\qstart{Deity functioning on the first creature\hyp{}identificational level as time\hyp{}space overcontrollers of the grand universe is called ...}
 {the Ultimacy of Deity}{0}
 {the Supremacy of Deity}{1}
 \qstop
 
-\qstart{Deity functioning on the second level of unifying divinity expression as effective overcontrollers and absonite upholders of the master universe is called...}
+\qstart{Deity functioning on the second level of unifying divinity expression as effective overcontrollers and absonite upholders of the master universe is called ...}
 {the Ultimacy of Deity}{1}
 {the Supremacy of Deity}{0}
 \qstop
@@ -208,12 +208,12 @@
 {False}{0}
 \qstop
 
-\qstart{Deities of eternal existence, past, present, and future are known as...}
+\qstart{Deities of eternal existence, past, present, and future are known as ...}
 {experiential}{0}
 {existential}{1}
 \qstop
 
-\qstart{Deities actualizing in the post\hyp{}Havona present but of unending existence throughout all future eternity are known as...}
+\qstart{Deities actualizing in the post\hyp{}Havona present but of unending existence throughout all future eternity are known as ...}
 {experiential}{1}
 {existential}{0}
 \qstop
@@ -334,7 +334,7 @@
 {Unqualified Absolute}{0}
 \qstop
 
-\qstart{When in doubt it is best to refer the word God to the person of...}
+\qstart{When in doubt it is best to refer the word God to the person of ...}
 {the Universal Father}{1}
 {the Eternal Son}{0}
 {the Infinite Spirit}{0}
@@ -421,6 +421,17 @@
 
 \qpaper{46}{The Local System Headquarters}
 \qpaper{47}{The Seven Mansion Worlds}
+
+\qstart{On which of the mansion worlds is the resurrection hall located?}
+{\# 1}{1}
+{\# 2}{0}
+{\# 3}{0}
+{\# 4}{0}
+{\# 5}{0}
+{\# 6}{0}
+{\# 7}{0}
+\qstop
+
 \qpaper{48}{The Morontia Life}
 \qpaper{49}{The Inhabited Worlds}
 \qpaper{50}{The Planetary Princes}
@@ -448,16 +459,120 @@
 \qstop
 
 \qpaper{64}{The Evolutionary Races of Colour}
+
+\qstart{Which of these was a great leader of green men 350,000 years ago?}
+{Onagar}{0}
+{Porshunta}{0}
+{Fantad}{1}
+{Sontad}{0}
+\qstop
+
 \qpaper{65}{The Overcontrol of Evolution}
+
 \qpaper{66}{The Planetary Prince of Urantia}
+
+\qstart{How long did it take to spread the news of the arrival of the Planetary Prince Caligastia around the world?}
+{1000 years}{1}
+{100 years}{0}
+{500 years}{0}
+{50,000 years}{0}
+{25 years}{0}
+\qstop
+
 \qpaper{67}{The Planetary Rebellion}
+
 \qpaper{68}{The Dawn of Civilization}
+
 \qpaper{69}{Primitive Human Institutions}
+
 \qpaper{70}{The Evolution of Human Government}
+
 \qpaper{71}{Development of the State}
+
 \qpaper{72}{Government on a Neighbouring Planet}
+
 \qpaper{73}{The Garden of Eden}
+
 \qpaper{74}{Adam and Eve}
+
+\qstart{What was the serial number of Adam and Eve of Urantia?}
+{10,311}{0}
+{14,311}{1}
+{18,311}{0}
+{20,311}{0}
+{6,666}{0}
+{66,666}{0}
+\qstop
+
+\qstart{What was the height of Adam and Eve?}
+{1.65\,m}{0}
+{1.8\,m}{0}
+{2.2\,m}{0}
+{2.4\,m}{1}
+{2.8\,m}{0}
+{3.1\,m}{0}
+{3.5\,m}{0}
+\qstop
+
+\qstart{At what age did Adamic children cease to nurse the mother's breast?}
+{eight months}{0}
+{nine months}{0}
+{one year}{1}
+{one and a half years}{0}
+{two years}{0}
+{three years}{0}
+\qstop
+
+\qstart{How many times a day did the members of Adam's family eat?}
+{once, shortly after noontime}{1}
+{twice, morning and evening}{0}
+{three times}{0}
+{five times}{0}
+{six times (like Hobbits)}{0}
+\qstop
+
+\qstart{How did Eve nourish her children after they ceased to take the mother's breast before they grew teeth?}
+{by milk of animals}{0}
+{by milk of nuts and fruit juice}{1}
+{by cooked porridge}{0}
+\qstop
+
+\qstart{Adamic children attended school until they were ...}
+{10}{0}
+{12}{0}
+{14}{0}
+{16}{1}
+{18}{0}
+{22}{0}
+{26}{0}
+\qstop
+
+\qstart{Who taught the younger children of Adam at school?}
+{they taught themselves}{0}
+{the elder children}{1}
+{specially appointed instructors}{0}
+{morontia visitors}{0}
+{seraphic guardians}{0}
+{Secondary Midwayers}{0}
+{Primary Midwayers}{0}
+\qstop
+
+\qstart{When Adam and Eve left the Garden, their family consisted of ...}
+{1 generation}{0}
+{2 generations}{0}
+{3 generations}{0}
+{4 generations}{1}
+{5 generations}{0}
+{6 generations}{0}
+\qstop
+
+\qstart{When Adam and Eve left the Garden, their family consisted of ...}
+{989 pure\hyp{}line descendants}{0}
+{689 pure\hyp{}line descendants}{0}
+{2,011 pure\hyp{}line descendants}{0}
+{1,647 pure\hyp{}line descendants}{1}
+{2,912 pure\hyp{}line descendants}{0}
+\qstop
 
 \qpaper{75}{The Default of Adam and Eve}
 
@@ -472,7 +587,12 @@
 
 \qpaper{76}{The Second Garden}
 
-\qstart{What was the name of the first child of Adam and Eve to be born in the second garden?}
+\qstart{The transgression of Adam and Eve was ...}
+{an error of judgment}{1}
+{the sin of conscious and deliberate rebellion}{0}
+\qstop
+
+\qstart{The name of the first child of Adam and Eve to be born in the second garden was ...}
 {Cain}{0}
 {Abel}{1}
 {Seth}{0}
@@ -487,6 +607,22 @@
 {36 and 34}{0}
 {136 and 134}{0}
 {16 and 14}{0}
+\qstop
+
+\qstart{How did Adam and Eve find out about the death of Abel?}
+{telepathically}{0}
+{dogs brought the flocks back without their master}{1}
+{Cain told them}{0}
+{Cain sent the message by a servant}{0}
+{by a Secondary Midwayer}{0}
+\qstop
+
+\qstart{Who were Andites?}
+{a separate Sangik race}{0}
+{offspring of Andonites}{0}
+{same as Andonites}{0}
+{result of the union of Adamites and Sangik races}{0}
+{result of the union of Adamites and Nodites}{1}
 \qstop
 
 \qstart{How old was Adam when he died?}
@@ -526,7 +662,15 @@
 \qstop
 
 \qpaper{77}{The Midway Creatures}
+
 \qpaper{78}{The Violet Race after the Days of Adam}
+
+\qstart{How many Adamites were living on Urantia by 19,000 B.C.?}
+{1 million}{0}
+{4.5 million}{1}
+{25 millions}{0}
+{100 millions}{0}
+\qstop
 
 \qpaper{79}{Andite Expansion in the Orient}
 
@@ -540,37 +684,97 @@
 \qstop
 
 \qpaper{80}{Andite Expansion in the Occident}
+
 \qpaper{81}{Development of Modern Civilization}
+
 \qpaper{82}{The Evolution of Marriage}
+
 \qpaper{83}{The Marriage Institution}
+
 \qpaper{84}{Marriage and Family Life}
+
 \qpaper{85}{The Origins of Worship}
+
 \qpaper{86}{Early Evolution of Religion}
+
 \qpaper{87}{The Ghost Cults}
+
 \qpaper{88}{Fetishes, Charms, and Magic}
+
+\qstart{What was mankind's first toy?}
+{mammoth bone}{0}
+{preserved umbilical cord}{1}
+{fish bone}{0}
+{preserved skull}{0}
+{fish eyes}{0}
+\qstop
+
+\qstart{What was mankind's first necklace?}
+{rope set with fish eyes}{0}
+{mammoth sinew set with precious stones}{0}
+{umbilical cord set with pearls}{1}
+\qstop
+
+\qstart{Moses' injunction against fetishes became ...}
+{the Law of God}{0}
+{the Word of God}{0}
+{the supreme fetish}{1}
+\qstop
+
 \qpaper{89}{Sin, Sacrifice, and Atonement}
+
 \qpaper{90}{Shamanism --- Medicine Men and Priests}
+
 \qpaper{91}{The Evolution of Prayer}
+
 \qpaper{92}{The Later Evolution of Religion}
+
 \qpaper{93}{Machiventa Melchizedek}
+
 \qpaper{94}{The Melchizedek Teachings in the Orient}
+
+\qstart{The religion of Buddhism is based on the teachings of ...}
+{Lao-tse}{0}
+{Gautama Siddhartha}{1}
+{Confucius (Kung Fu-tze)}{0}
+{Ikhnaton}{0}
+{Krishna}{0}
+\qstop
+
 \qpaper{95}{The Melchizedek Teachings in the Levant}
+
 \qpaper{96}{Yahweh --- God of the Hebrews}
+
 \qpaper{97}{Evolution of the God Concept among the Hebrews}
+
 \qpaper{98}{The Melchizedek Teachings in the Occident}
+
 \qpaper{99}{The Social Problems of Religion}
+
 \qpaper{100}{Religion in Human Experience}
+
 \qpaper{101}{The Real Nature of Religion}
+
 \qpaper{102}{The Foundations of Religious Faith}
+
 \qpaper{103}{The Reality of Religious Experience}
+
 \qpaper{104}{Growth of the Trinity Concept}
+
 \qpaper{105}{Deity and Reality}
+
 \qpaper{106}{Universe Levels of Reality}
+
 \qpaper{107}{Origin and Nature of Thought Adjusters}
+
 \qpaper{108}{Mission and Ministry of Thought Adjusters}
+
 \qpaper{109}{Relation of Adjusters to Universe Creatures}
+
 \qpaper{110}{Relation of Adjusters to Individual Mortals}
+
 \qpaper{111}{The Adjuster and the Soul}
+
 \qpaper{112}{Personality Survival}
 
 \qpaper{113}{Seraphic Guardians of Destiny}
@@ -585,11 +789,84 @@
 \qstop
 
 \qpaper{114}{Seraphic Planetary Government}
+
 \qpaper{115}{The Supreme Being}
+
 \qpaper{116}{The Almighty Supreme}
+
 \qpaper{117}{God the Supreme}
+
 \qpaper{118}{Supreme and Ultimate --- Time and Space}
+
 \qpaper{119}{The Bestowals of Christ Michael}
+
+\qstart{At what time of day did Michael appear on the planet of his bestowal as a Melchizedek?}
+{early morning}{0}
+{noon}{1}
+{late evening}{0}
+{midnight}{0}
+{unknown}{0}
+\qstop
+
+\qstart{How many Melchizedeks witnessed the disappearance of Michael at the end of his bestowal as a Melchizedek?}
+{0}{0}
+{1}{0}
+{3}{1}
+{4}{0}
+{7}{0}
+{thousands}{0}
+\qstop
+
+\qstart{At what time of day did Michael disappear from the planet of his bestowal as a Melchizedek?}
+{early morning}{0}
+{noon}{1}
+{late evening}{0}
+{midnight}{0}
+{unknown}{0}
+\qstop
+
+\qstart{What was the name of system 11 in constellation 37?}
+{Polonia}{0}
+{Palonia}{1}
+{Abbadonia}{0}
+{Avalonia}{0}
+{Panoptia}{0}
+\qstop
+
+\qstart{What was the name of the rebel System Sovereign of Palonia?}
+{Lucifer}{0}
+{Lutentia}{1}
+{Balantia}{0}
+{Tabamantia}{0}
+{Serapatatia}{0}
+{Gavalia}{0}
+\qstop
+
+\qstart{Did Lutentia accept Michael's offer of mercy?}
+{yes}{0}
+{no}{1}
+\qstop
+
+\qstart{At what time of day did Michael appear on the planet of his bestowal as a Lanonandek?}
+{early morning}{0}
+{noon}{1}
+{late evening}{0}
+{midnight}{0}
+{unknown}{0}
+\qstop
+
+\qstart{Was there a Material Daughter assigned to assist Michael during his bestowal as a Material Son?}
+{yes}{0}
+{no}{1}
+\qstop
+
+\qstart{At what time of day did Michael disappear from the planet of his bestowal as a Material Son?}
+{early morning}{0}
+{noon}{1}
+{late evening}{0}
+{midnight}{0}
+{unknown}{0}
+\qstop
 
 \qpaper{120}{The Bestowal of Michael on Urantia}
 
@@ -603,78 +880,189 @@
 \qstop
 
 \qpaper{121}{The Times of Michael’s Bestowal}
+
+\qstart{Who wrote ``The Gospel according to Matthew''?}
+{Matthew}{0}
+{Isador}{1}
+{Luke}{0}
+{Mark}{0}
+{Paul}{0}
+{a slave named Cedes}{0}
+\qstop
+
+\qstart{Who wrote ``The Gospel according to Luke''?}
+{Matthew}{0}
+{Isador}{0}
+{Luke}{1}
+{Mark}{0}
+{Paul}{0}
+{a slave named Cedes}{0}
+\qstop
+
+\qstart{When did Luke write his Gospel?}
+{76\,A.D.}{0}
+{70\,A.D.}{0}
+{82\,A.D.}{1}
+{86\,A.D.}{0}
+{90\,A.D.}{0}
+{99\,A.D.}{0}
+\qstop
+
+\qstart{When did Luke finish ``The Acts of the Apostles''?}
+{76\,A.D.}{0}
+{70\,A.D.}{0}
+{80\,A.D.}{0}
+{86\,A.D.}{0}
+{90\,A.D.}{0}
+{Never finished}{1}
+\qstop
+
 \qpaper{122}{Birth and Infancy of Jesus}
+
 \qpaper{123}{The Early Childhood of Jesus}
+
 \qpaper{124}{The Later Childhood of Jesus}
+
 \qpaper{125}{Jesus at Jerusalem}
+
 \qpaper{126}{The Two Crucial Years}
+
 \qpaper{127}{The Adolescent Years}
+
 \qpaper{128}{Jesus’ Early Manhood}
+
 \qpaper{129}{The Later Adult Life of Jesus}
+
 \qpaper{130}{On the Way to Rome}
+
 \qpaper{131}{The World’s Religions}
+
 \qpaper{132}{The Sojourn at Rome}
+
 \qpaper{133}{The Return from Rome}
+
 \qpaper{134}{The Transition Years}
+
 \qpaper{135}{John the Baptist}
+
 \qpaper{136}{Baptism and the Forty Days}
+
 \qpaper{137}{Tarrying Time in Galilee}
+
 \qpaper{138}{Training the Kingdom’s Messengers}
+
 \qpaper{139}{The Twelve Apostles}
+
 \qpaper{140}{The Ordination of the Twelve}
+
 \qpaper{141}{Beginning the Public Work}
+
 \qpaper{142}{The Passover at Jerusalem}
+
 \qpaper{143}{Going Through Samaria}
+
 \qpaper{144}{At Gilboa and in the Decapolis}
+
 \qpaper{145}{Four Eventful Days at Capernaum}
+
 \qpaper{146}{First Preaching Tour of Galilee}
+
 \qpaper{147}{The Interlude Visit to Jerusalem}
+
 \qpaper{148}{Training Evangelists at Bethsaida}
+
 \qpaper{149}{The Second Preaching Tour}
+
 \qpaper{150}{The Third Preaching Tour}
+
 \qpaper{151}{Tarrying and Teaching by the Seaside}
+
 \qpaper{152}{Events Leading up to the Capernaum Crisis}
+
 \qpaper{153}{The Crisis at Capernaum}
+
 \qpaper{154}{Last Days at Capernaum}
+
 \qpaper{155}{Fleeing Through Northern Galilee}
+
 \qpaper{156}{The Sojourn at Tyre and Sidon}
+
 \qpaper{157}{At Caesarea\hyp{}Philippi}
+
 \qpaper{158}{The Mount of Transfiguration}
+
 \qpaper{159}{The Decapolis Tour}
+
 \qpaper{160}{Rodan of Alexandria}
+
 \qpaper{161}{Further Discussions with Rodan}
+
 \qpaper{162}{At the Feast of Tabernacles}
+
 \qpaper{163}{Ordination of the Seventy at Magadan}
+
 \qpaper{164}{At the Feast of Dedication}
+
 \qpaper{165}{The Perean Mission Begins}
+
 \qpaper{166}{Last Visit to Northern Perea}
+
 \qpaper{167}{The Visit to Philadelphia}
+
 \qpaper{168}{The Resurrection of Lazarus}
+
 \qpaper{169}{Last Teaching at Pella}
+
 \qpaper{170}{The Kingdom of Heaven}
+
 \qpaper{171}{On the Way to Jerusalem}
+
 \qpaper{172}{Going into Jerusalem}
+
 \qpaper{173}{Monday in Jerusalem}
+
 \qpaper{174}{Tuesday Morning in the Temple}
+
 \qpaper{175}{The Last Temple Discourse}
+
 \qpaper{176}{Tuesday Evening on Mount Olivet}
+
 \qpaper{177}{Wednesday, the Rest Day}
+
 \qpaper{178}{Last Day at the Camp}
+
 \qpaper{179}{The Last Supper}
+
 \qpaper{180}{The Farewell Discourse}
+
 \qpaper{181}{Final Admonitions and Warnings}
+
 \qpaper{182}{In Gethsemane}
+
 \qpaper{183}{The Betrayal and Arrest of Jesus}
+
 \qpaper{184}{Before the Sanhedrin Court}
+
 \qpaper{185}{The Trial Before Pilate}
+
 \qpaper{186}{Just Before the Crucifixion}
+
 \qpaper{187}{The Crucifixion}
+
 \qpaper{188}{The Time of the Tomb}
+
 \qpaper{189}{The Resurrection}
+
 \qpaper{190}{Morontia Appearances of Jesus}
+
 \qpaper{191}{Appearances to the Apostles and Other Leaders}
+
 \qpaper{192}{Appearances in Galilee}
+
 \qpaper{193}{Final Appearances and Ascension}
+
 \qpaper{194}{Bestowal of the Spirit of Truth}
+
 \qpaper{195}{After Pentecost}
+
 \qpaper{196}{The Faith of Jesus}
